# libe-book

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h.in  configure  configure.ac  libe-book.pc.in
data/: Makefile.am  Makefile.in
debian/: changelog  control  rules  watch
debian/patches/: no-icu-boolean.diff  series
docs/: Makefile.in
docs/doxygen/: Makefile.am  Makefile.in  doxygen.cfg
inc/: Makefile.am  Makefile.in
inc/libe-book/: EBOOKDocument.h  Makefile.am  Makefile.in  libe-book.h
src/: Makefile.am  Makefile.in
src/conv/: Makefile.am  Makefile.in
src/conv/html/: Makefile.am  Makefile.in  ebook2html.cpp  ebook2html.rc.in
src/conv/raw/: Makefile.am  Makefile.in  ebook2raw.cpp  ebook2raw.rc.in
src/conv/text/: Makefile.am  Makefile.in  ebook2text.cpp  ebook2text.rc.in
src/fuzz/: Makefile.am  Makefile.in  lrffuzzer.cpp  pdbfuzzer.cpp
src/lib/: BBeBCollector.cpp  BBeBCollector.h  BBeBMetadataParser.cpp  BBeBMetadataParser.h  BBeBParser.cpp  BBeBParser.h  BBeBTypes.cpp  BBeBTypes.h  EBOOKBitStream.cpp  EBOOKBitStream.h  EBOOKCharsetConverter.cpp  EBOOKCharsetConverter.h  EBOOKDocument.cpp  EBOOKHTMLParser.cpp  EBOOKHTMLParser.h  EBOOKHTMLToken.cpp  EBOOKHTMLToken.gperf  EBOOKHTMLToken.h  EBOOKHTMLTypes.cpp  EBOOKHTMLTypes.h  EBOOKLanguageManager.cpp  EBOOKLanguageManager.h  EBOOKMemoryStream.cpp  EBOOKMemoryStream.h  EBOOKOPFParser.cpp  EBOOKOPFParser.h  EBOOKOPFToken.cpp  EBOOKOPFToken.gperf  EBOOKOPFToken.h  EBOOKOutputElements.cpp  EBOOKOutputElements.h  EBOOKSAXParser.cpp  EBOOKSAXParser.h  EBOOKStreamView.cpp  EBOOKStreamView.h  EBOOKSubDocument.cpp  EBOOKSubDocument.h  EBOOKToken.h  EBOOKTokenizer.cpp  EBOOKTokenizer.h  (+128 more)
src/test/: EBOOKBitStreamTest.cpp  EBOOKLanguageManagerTest.cpp  EBOOKMemoryStreamTest.cpp  Makefile.am  Makefile.in  PDBLZ77StreamTest.cpp  SoftBookLZSSStreamTest.cpp  XMLCollectorTest.cpp  XMLTreeWalkerTest.cpp  test.cpp
